--- a/views/new.erb
+++ b/views/new.erb
@@ -1,4 +1,10 @@
 <h2>Add New Post</h2>
 <p>
-	We will add new post here
+    <form>
+       <div class="form-floating">
+         <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+         <label for="floatingTextarea">Comments</label>
+       </div>
+       <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </p>
