--- a/views/new.erb
+++ b/views/new.erb
@@ -2,7 +2,7 @@
 <p>
     <form action="/new" method="POST">
        <div class="form-floating">
-         <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+         <textarea name="content" class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
          <label for="floatingTextarea">Comments</label>
        </div>
        <button type="submit" class="btn btn-primary">Submit</button>
