Add textarea to /details/...

--- a/views/details.erb
+++ b/views/details.erb
@@ -7,3 +7,14 @@
 	Added at <%= @row['created_date'] %>
 	<br />
 </p>
+<br />
+<h4>Comments:</h4>
+<p>
+    <form action="/details/<%= @row['id'] %>" method="POST">
+       <div class="form-floating">
+         <textarea name="content" class="form-control" placeholder="Type comment text here" id="floatingTextarea"></textarea>
+         <label for="floatingTextarea"></label>
+       </div>
+       <button type="submit" class="btn btn-primary">Add comment</button>
+    </form>
+</p> 
