--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
     <form action="/new" method="POST">
        <div class="form-floating">
          <textarea name="content" class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-         <label for="floatingTextarea">Comments</label>
+         <label for="floatingTextarea"></label>
        </div>
        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
